src/test/testcases/errors/p2_public/task_2/assign_err_5.ctx.mavl
record rec {
	var int x;
}

function void main(){
    val rec r = @rec[5];
    r@x = 7;
}
